--- a/event_planning_app/pubspec.yaml
+++ b/event_planning_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.7.1
   firebase_auth: ^4.2.10
   cloud_firestore: ^4.4.4
+  uuid: ^3.0.7
+  dropdown_search: ^5.0.6
+  datetime_picker_formfield: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +65,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/vendor/images/vhome.png
+     - assets/vendor/images/gold.png
+     - assets/vendor/images/silver.png
+     - assets/vendor/images/bronze.png
+     - assets/vendor/images/booking.png
+     - assets/vendor/images/admin.png
+     - assets/vendor/images/home.png
+     - assets/Task/images/task.png
+     - assets/vendor/images/homeback.png
+     - assets/vendor/images/flower.png
+     - assets/Task/images/update.png
+     
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
